[form-builder] fix validation not showing on collapsed objects + styling

--- a/packages/@sanity/components/src/validation/styles/ValidationListItem.css
+++ b/packages/@sanity/components/src/validation/styles/ValidationListItem.css
@@ -25,7 +25,7 @@
   }
 
   @nest & .icon {
-    padding-top: 3px;
+    padding-top: 1px;
     font-size: var(--font-size-base);
   }
 }
